<!--
  ~ Copyright (c) 2018
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  ~ File Created on 02/06/18 12:55 AM by nishant
  ~ Last Modified on 01/06/18 11:25 PM
  -->

<resources>
    <string name="app_name">Berry</string>
    <string name="need_account_label">Need a new account ?</string>
    <string name="display_name_edit_text_hint">Display Name</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="create_account_btn_label">Create Account</string>
    <string name="menu_sign_out_label">Sign out</string>
    <string name="menu_account_settings_label">Account settings</string>
    <string name="menu_all_users_label">All users</string>
    <string name="create_a_new_account_label">Create a new account</string>
    <string name="already_have_account_label">Already have account</string>
    <string name="welcome_to_berry_label">Welcome to Berry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_avatar_label">Change Avatar</string>
    <string name="change_status_label">Change status</string>
    <string name="status_hint">Status</string>
    <string name="save_label">Save</string>
    <string name="alert_view_profile_label">View profile</string>
    <string name="alert_send_message_label">Send message</string>
    <string name="alert_select_options_label">Select Options</string>
    <string name="friend_req_accept_label">Accept</string>
    <string name="friend_req_decline_label">Decline</string>
    <string name="search_view_hint">Name...</string>
    <string name="search_label">Search</string>
</resources>
