<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  ~ File Created on 02/06/18 12:55 AM by nishant
  ~ Last Modified on 01/06/18 10:54 PM
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.nishant.berry.ui.start.StartActivity" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.start.StartActivity">

        <TextView
            android:id="@+id/start_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="cursive"
            android:text="@string/welcome_to_berry_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorSecondaryLight"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <Button
            android:id="@+id/start_registration_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{()->activity.onRegistrationButtonClick()}"
            android:text="@string/need_account_label"
            app:layout_constraintEnd_toEndOf="@+id/start_sign_in_button"
            app:layout_constraintStart_toStartOf="@+id/start_sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/start_sign_in_button" />

        <Button
            android:id="@+id/start_sign_in_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:onClick="@{()->activity.onSignInButtonClick()}"
            android:text="@string/already_have_account_label"
            app:layout_constraintEnd_toEndOf="@+id/start_heading"
            app:layout_constraintStart_toStartOf="@+id/start_heading"
            app:layout_constraintTop_toBottomOf="@+id/start_heading" />

    </android.support.constraint.ConstraintLayout>
</layout>