<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  ~ File Created on 11/06/18 9:41 PM by nishant
  ~ Last Modified on 11/06/18 9:41 PM
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        app:layout_constraintCircleRadius="2dp">

        <ImageView
            android:id="@+id/alert_header_background"
            android:layout_width="0dp"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorSecondaryLight" />

        <TextView
            android:id="@+id/alert_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/alert_select_options_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/alert_header_background"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/alert_view_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/item_selector"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/alert_view_profile_label"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_header_background" />

        <TextView
            android:id="@+id/alert_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/item_selector"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/alert_send_message_label"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_view_profile" />
    </android.support.constraint.ConstraintLayout>
</layout>
